@startuml design
!pragma layout smetana

class User {
    id: string
    name: string
    password: string
    creationDate: datetime
}

class Customer {
    address: string
    phone: string
    creditCardNumber: string
    creditCardExpirationDate: date
    creditCardCode: string
}

class Administrator {
    + getUser()
}

class Product {
    code: string
    description: string
    availability: boolean
    price: double
}

class Order{
    number: integer
    creationDate: datetime
    status: string
}

class Item{
    sequentialNumber: integer
    quantity: integer
    price: double
}

User <|-- Customer
User <|-- Administrator

Order "1" *--> "0..N" Item : Items
Item "0..N" --> "1" Product: Product
Customer "1" *--> "1..N" Order: Orders



@enduml